# lifestream_test_ex

./: CMakeLists.txt  README.md  package.cpp  package.h  run.sh  settings.h
client/: CMakeLists.txt  client.cpp  client.h
server/: CMakeLists.txt  server.cpp  server.h
test_data/: filenames.txt  test_1.txt
